--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,13 +284,12 @@ body {
   color: var(--on-surface);
 }
 
--card-lg {
+.card-lg {
   border-radius: var(--radius-28);
   padding: 20px;
 }
 
 .card-sm {
-  padding: 16px;
   border-radius: var(--radius-16);
   padding: 16px;
 }
@@ -340,7 +339,7 @@ body {
   #HEADER
 \*-----------------------------------*/
 
-header .btn-primary .span {
+.header .btn-primary .span {
   display: none;
 }
 
@@ -349,7 +348,7 @@ header .btn-primary .span {
 }
 
 .header .container,
-header-actions {
+.header-actions {
   display: flex;
   align-items: center;
 }
@@ -480,11 +479,94 @@ header-actions {
   #MAIN
 \*-----------------------------------*/
 
+main{
+  height: calc(100vh - 80px);
+  height: calc(100svh - 80px);
+  overflow: hidden;
+}
 
+article.container{
+  position: relative;
+  display: grid;
+  grid-template-columns: minmax(0, 1fr);
+  gap: 20px;
+  height: 100%;
+  overflow-y: auto;
+  overflow-y: overlay;
+}
+
+article.container::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+article.container:is(:hover, :focus-within)::-webkit-scrollbar-thumb{
+  background-color: var(--white-alpha-8);
+}
+
+article.container::-webkit-scrollbar-button {
+  height: 10px;
+}
+
+article.container::before{
+  content: "";
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: var(--gradient-1);
+  pointer-events: none;
+  z-index: 1;
+}
+
+.section:not(:last-child){
+  margin-block-end: 16px;
+}
+
+
+/*-----------------------------------*\
+  #CURRENT WEATHER
+\*-----------------------------------*/
+
+.current-weather-card .wrapper{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-block: 12px;
+}
+
+.current-weather-card .weather-icon{
+  margin-inline: auto;
+}
+
+.current-weather-card > .body-3{
+  text-transform: capitalize;
+}
+
+.current-weather-card .meta-list{
+  margin-block-start: 16px;
+  padding-block-start: 16px;
+  border-block-start: 1px solid var(--outline);
+}
+
+.current-weather-card .meta-item{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.current-weather-card .meta-item:not(:last-child){
+  margin-block-end: 12px;
+}
+
+.current-weather-card .meta-text{
+  color: var(--on-surface-variant);
+}
 
 /*-----------------------------------*\
   #HIGHLIGHTS
 \*-----------------------------------*/
+
+
 
 /*-----------------------------------*\
   #HOURLY FORECAST
