--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,10 +410,10 @@ body {
   left: 0;
   width: 100%;
   height: 100vh;
-  height: 100svh; /* for mobile browser */
+  height: 100svh; /* for moblie browser */
   background-color: var(--surface);
   color: var(--on-surface);
-  clip-path: circle(4% at calc(100% - 102px) 5%);
+  clip-path: circle(4% at calc(100%-102px) 5%);
   opacity: 0;
   visibility: hidden;
   z-index: 4;
@@ -442,11 +442,11 @@ body {
   border: 3px solid var(--on-surface);
   border-block-start-color: transparent;
   border-radius: var(--radius-circle);
-  animation: loading 500ms linear infinite;
+  animation: lodding 500ms linear infinite;
   display: none;
 }
 
-@keyframes loading {
+@keyframes lodding {
   0% {
     transform: translateY(-50%) rotate(0);
   }
@@ -567,10 +567,10 @@ article.container::before {
 \*-----------------------------------*/
 
 .current-weather-card .wrapper {
-  display: flex;
-  align-items: center;
-  gap: 8px;
   margin-block: 12px;
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
 
 .current-weather-card .weather-icon {
@@ -691,27 +691,27 @@ article.container::before {
   cursor: help;
 }
 
-.badge.aqi-1 {
+.badge.api-1 {
   background-color: var(--bg-aqi-1);
   color: var(--on-bg-aqi-1);
 }
 
-.badge.aqi-2 {
+.badge.api-2 {
   background-color: var(--bg-aqi-2);
   color: var(--on-bg-aqi-2);
 }
 
-.badge.aqi-3 {
+.badge.api-3 {
   background-color: var(--bg-aqi-3);
   color: var(--on-bg-aqi-3);
 }
 
-.badge.aqi-4 {
+.badge.api-4 {
   background-color: var(--bg-aqi-4);
   color: var(--on-bg-aqi-4);
 }
 
-.badge.aqi-5 {
+.badge.api-5 {
   background-color: var(--bg-aqi-5);
   color: var(--on-bg-aqi-5);
 }
@@ -784,7 +784,7 @@ article.container::before {
   color: var(--on-surface-variant);
   text-align: center;
   gap: 12px 24px;
-  margin-block-start: 20px;
+  margin-block-start: 28px;
   display: none;
 }
 
@@ -807,9 +807,9 @@ article.container::before {
   width: 100%;
   height: 100%;
   background-color: var(--background);
-  display: none;
   place-items: center;
   z-index: 1;
+  display: none;
 }
 
 .loading::before {
@@ -819,7 +819,7 @@ article.container::before {
   border: 4px solid var(--on-background);
   border-block-start-color: transparent;
   border-radius: var(--radius-circle);
-  animation: loading 500ms linear infinite;
+  animation: lodding 700ms linear infinite;
 }
 
 /*-----------------------------------*\
